
  HCAT-368 Documentation improvements: doc set & API docs (lefty via gates)

  HCAT-387 Trunk should point to 0.10 snapshot to match hive trunk (toffer)

  HCAT-329 HCatalog build fails with pig 0.9 (traviscrawford via hashutosh)

  HCAT-233 gitignore file (enis via gates)

  OPTIMIZATIONS

  BUG FIXES
  HCAT-580 Optimizations in HCAT-538 break e2e tests (daijy via gates)

  HCAT-583 e2e tests do not build (gates)

  HCAT-577 HCatContext causes persistance of undesired jobConf parameters (khorgath via gates)

  HCAT-584 Changes in HCAT-538 break Pig stores into non-partitioned tables (gates)

  HCAT-576 HCATALOG-527 Broke backward compatibility (gates)

  HCAT-567 HCatClient must allow retrieval of multiple partitions using a partial partition spec.(mithun via avandana)

  HCAT-556 HCatalog-trunk doesn't build against Hive-0.10.0 (mithun via avandana)

  HCAT-566 HCatTable doesn't report partition columns correctly. (mithun via traviscrawford)

  HCAT-562 HCatClient should allow for a table's message-topic-name to be queried for. (mithunr via avandana)

  HCAT-561 HCatClient should differentiate between "partition not available" and other generic errors.(mithunr via avandana)

  HCAT-563 hcat script should look in the correct dir for the storage handler jars (arpitgupta via khorgath)

  HCAT-559 Fix trivial build warnings in HCat trunk (mithunr via avandana)

  HCAT-555 hcat script should look for hcatalog-core jar and add HCAT_PREFIX/conf as a config location that is checked. (arpitgupta via traviscrawford)

  HCAT-534 HCat_Drop_Table_3 dfs mkdir failing on hadoop23 (cdrome via toffer)

  HCAT-453 HCatalog queries fail due to exceeding max jobconf size (pengfeng via traviscrawford)

  HCAT-523 PigHCatUtil should not assume map key type can be casted to String (pengfeng via traviscrawford)

  HCAT-522 Make HCatHadoopShims.commitJob() generic (traviscrawford)

  HCAT-451 Partitions are created even when Jobs are aborted (avandana)
