@@ -50,11 +50,15 @@
           <exclude name="README.txt"/>
           <exclude name="RELEASE_NOTES.txt"/>
           <exclude name="*.patch"/>
-          <exclude name="**/*.swp"/> <!-- Don't hork on Alan's vim swap files -->
-          <exclude name="src/test/e2e/**/*.pm"/> <!-- Exclude these for now because it's looking for Java style comments and failing. -->
-          <exclude name="src/test/e2e/**/*.pl"/> <!-- Exclude these for now because it's looking for Java style comments and failing. -->
-          <exclude name="src/test/e2e/**/*.xml"/> <!-- Exclude these for now because it's looking for Java style comments and failing. -->
-          <exclude name="src/test/e2e/**/*.conf"/> <!-- Exclude these for now because it's looking for Java style comments and failing. -->
+          <exclude name="tags"/>
+          <exclude name="**/*.swp"/> <!-- vim swap files -->
+          <exclude name="**/*.orig"/> <!-- files created by patch -->
+          <exclude name="**/*.rej"/> <!-- files created by patch -->
+          <exclude name="src/test/e2e/harness/**"/> <!-- These aren't under hcat's control --> 
+          <exclude name="src/test/e2e/hcatalog/testdist/**"/> <!-- Test run results --> 
+          <exclude name="src/test/e2e/hcatalog/tar/**"/> <!-- Test build area --> 
+          <exclude name="src/test/e2e/hcatalog/udfs/java/*.jar"/> <!-- Test build area --> 
+          <exclude name="src/test/e2e/hcatalog/hcattests.tar"/> <!-- Test build artifact --> 
       </fileset>
       <formatter type="plain"/>
       <formatter type="xml" toFile="${build.dir}/checkstyle/checkstyle_result.xml"/>
