@@ -158,6 +158,8 @@ Release 0.5.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-586 checkstyle fails every time complaining that it's own header file does not have the proper header (gates)
+
   HCAT-580 Optimizations in HCAT-538 break e2e tests (daijy via gates)
 
   HCAT-583 e2e tests do not build (gates)
